[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omplx"
version = "0.1.0"
description = "JAX-based motion planning with OMPL integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Weihang Guo", email = "weihang.guo@rice.edu"}
]
keywords = ["motion planning", "robotics", "ompl", "jax", "collision detection"]

dependencies = [
    "jax",
    "jaxlie",
    "jaxls @ git+https://github.com/brentyi/jaxls.git",
    "pyroki",
    "yourdfpy",
    "jaxtyping",
    "numpy",
]

[tool.setuptools]
packages = ["omplx"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
omplx = ["py.typed"]

